# inl_pjatk_project

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
app/: main.py
app/data/: toy_passages.csv
app/data/calibration/wiki-trivia/test/: hits_points_maxk200_log_p20.csv  hits_points_maxk500_log_p3.csv  hits_summary_maxk200_log_p20.csv  hits_summary_maxk500_log_p3.csv
app/data/submissions/bm25_okapi/: metrics.csv
app/data/submissions/hybrid_bm25_biencoder/: metrics.csv
app/data/submissions/hybrid_tfidf_biencoder/: metrics.csv
app/data/submissions/tfidf_cosine/: metrics.csv
app/pages/: page_1_problem_summary.py  page_2_lexical_baselines.py  page_3_lexical_plus_reranker.py  page_4_summary.py
notebooks/: eda.ipynb  fteval.ipynb  tfidf_eval.ipynb
results/: README.md
results/hybrid/: hybrid_bm25_biencoder.md  hybrid_bm25_lsa.md  hybrid_tfidf_biencoder.md  hybrid_tfidf_lsa.md
results/lexical/: bm25_okapi.md  tfidf_cosine.md
src/: README.md
src/calibration/: README.md  __init__.py  hits_at_k.py
src/config/: README.md  config.toml  config_parser.py  paths.py
src/data_source/: README.md  get_data.py
src/eval/: README.md  bm25_eval.py  ft_eval.py  metrics_io.py  retrieval_eval.py  tfidf_eval.py
src/eval/hybrid/: README.md  __init__.py  bm25_biencoder_eval.py  bm25_fasttext_eval.py  bm25_lsa_eval.py  tfidf_biencoder_eval.py  tfidf_fasttext_eval.py  tfidf_lsa_eval.py
src/hybrid/: README.md  __init__.py  lexical.py  pipeline.py  reranker.py  semantic.py  semantic_biencoder.py  semantic_lsa.py
src/models/: fasttext.py
src/preprocess/: README.md  bm25_vectors.py  download_biencoder.py  fasttext_vectors.py  lsa_svd.py  tf_idf_vectors.py
