[project]
name = "inl-pjatk-project"
version = "0.1.0"
description = "INL PJATK project"
readme = "README.md"

# This stack REQUIRES Python 3.11
requires-python = ">=3.11,<3.12"

dependencies = [
    "pandas>=2.3.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=2.6.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "datasets>=4.4.2",
    "pytest>=9.0.2",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
